--- a/appview/pages/templates/repo/pulls/pulls.html
+++ b/appview/pages/templates/repo/pulls/pulls.html
@@ -76,7 +76,10 @@
                     </span>
 
                     <span class="before:content-['·']">
-                        targeting branch <code>{{ .TargetBranch }}</code>
+                        targeting branch
+                        <span class="text-xs rounded bg-gray-100 text-black font-mono px-2 mx-1/2 inline-flex items-center">
+                          {{ .TargetBranch }}
+                        </span>
                     </span>
                 </p>
             </div>
