--- a/appview/pages/templates/layouts/repobase.html
+++ b/appview/pages/templates/layouts/repobase.html
@@ -13,8 +13,8 @@
       {{ template "fragments/repoDescription" . }}
     </section>
     <section class="min-h-screen flex flex-col drop-shadow-sm">
-        <nav class="w-full mx-auto ml-4">
-            <div class="flex z-60 overflow-auto">
+        <nav class="w-full pl-4 overflow-auto">
+            <div class="flex z-60">
                 {{ $activeTabStyles := "-mb-px bg-white" }}
                 {{ $tabs := .RepoInfo.GetTabs }}
                 {{ $tabmeta := .RepoInfo.TabMetadata }}
