appview/pulls: improve ui + validate patches

--- a/appview/pages/templates/repo/issues/issue.html
+++ b/appview/pages/templates/repo/issues/issue.html
@@ -1,7 +1,4 @@
-{{ define "title" }}
-    {{ .Issue.Title }} &middot; issue #{{ .Issue.IssueId }} &middot;
-    {{ .RepoInfo.FullName }}
-{{ end }}
+{{ define "title" }}{{ .Issue.Title }} &middot; issue #{{ .Issue.IssueId }} &middot;{{ .RepoInfo.FullName }}{{ end }}
 
 {{ define "repoContent" }}
     <header class="pb-4">
